--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="icon" href="/favicon.ico" />
-    <meta
-    name="description"
-    content="CRM control panel layout"
-  />
+    <meta name="description" content="CRM control panel layout" />
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -18,7 +15,7 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" />
     <title>CRM control panel</title>
-<script defer src="main.c54e00f14e7b0cc27b96.js"></script></head>
+<script defer src="main.6ff8dd4308d0bf38a430.js"></script></head>
 
 <body>
     <div id="root"></div>
